--- a/pom.xml
+++ b/pom.xml
@@ -248,6 +248,7 @@
         <module>ruoyi-modules</module>
         <module>ruoyi-api</module>
         <module>ruoyi-common</module>
+        <module>ruoyi-modules-danny</module>
     </modules>
     <packaging>pom</packaging>
 
