1.dockerfile文件修改 解决docker容器缺少Bpmn图像需要SimSun字体

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -138,3 +138,16 @@ services:
       dockerfile: dockerfile
     ports:
       - "9100:9100"
+  ruoyi-modules-danny:
+    container_name: ruoyi-modules-danny
+    build:
+      context: ./ruoyi/modules/danny
+      dockerfile: dockerfile
+    ports:
+      - "9204:9204"
+    depends_on:
+      - ruoyi-redis
+      - ruoyi-mysql
+    links:
+      - ruoyi-redis
+      - ruoyi-mysql
