1.searchReimById pdf报销单接口支持

--- a/ruoyi-modules/ruoyi-modules-danny/pom.xml
+++ b/ruoyi-modules/ruoyi-modules-danny/pom.xml
@@ -84,6 +84,11 @@
             <version>5.6.3</version>
         </dependency>
         <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.3.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.activiti</groupId>
             <artifactId>activiti-spring-boot-starter</artifactId>
             <version>7.0.0.GA</version>
