--- a/ruoyi-ui/package.json
+++ b/ruoyi-ui/package.json
@@ -58,7 +58,9 @@
     "vue-meta": "2.4.0",
     "vue-router": "3.4.9",
     "vuedraggable": "2.24.3",
-    "vuex": "3.6.0"
+    "vuex": "3.6.0",
+    "dayjs": "1.10.4",
+    "jspdf": "2.3.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.6",
