--- a/ruoyi-ui/package.json
+++ b/ruoyi-ui/package.json
@@ -79,7 +79,8 @@
     "sass-loader": "10.1.1",
     "script-ext-html-webpack-plugin": "2.1.5",
     "svg-sprite-loader": "5.1.1",
-    "vue-template-compiler": "2.6.12"
+    "vue-template-compiler": "2.6.12",
+    "less-loader": "8.0.0"
   },
   "engines": {
     "node": ">=8.9",
