--- a/ruoyi-ui/package.json
+++ b/ruoyi-ui/package.json
@@ -80,6 +80,7 @@
     "script-ext-html-webpack-plugin": "2.1.5",
     "svg-sprite-loader": "5.1.1",
     "vue-template-compiler": "2.6.12",
+    "less": "4.1.1",
     "less-loader": "8.0.0"
   },
   "engines": {
